--- a/.env
+++ b/.env
@@ -12,3 +12,10 @@ PORT=3000
 JWT_SECRET=your_secure_jwt_secret_key_here
 ACCESS_TOKEN_EXPIRY=15    # 访问令牌过期时间（分钟）
 REFRESH_TOKEN_EXPIRY=10080 # 刷新令牌过期时间（分钟，默认7天）
+
+# Redis配置
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=
+REDIS_DB=0
+AUTH_CODE_EXPIRY=600
